src/components/slider/slider.scss
:host {
  position: relative;
  display: flex;
  width: 100%;
  height: 32px;
}

.track-bg {
  position: absolute;
  display: flex;
  justify-content: space-between;
  inset: 0 8px;
  pointer-events: none;

  .progress-bar {
    position: absolute;
    height: 4px;
    border-radius: 1rem;
    z-index: 2;
    &-liner {
      background-color: $color-primary;
    }
    &-tooltip {
      position: absolute;
      top: -6px;
      right: -.5rem;
    }
    &-thumb {
      position: relative;
      width: 1rem;
      height: 1rem;
      border-radius: 1rem;
      background-color: $color-primary;
      z-index: 0;

      &::before {
        content: '';
        position: absolute;
        inset: 0;
        background-color: $color-hover;
        border-radius: 1rem;
        transition: all .3s ease-in-out;
      }
    }

    &-hover {
      .progress-bar{
        &-thumb {
          &::before {
            transform: scale(2);
          }
        }
      }
    }
  }

  &::before {
    content: '';
    position: absolute;
    inset: 0;
    height: 4px;
    background-color: $color-content-default;
    opacity: .16;
    border-radius: 1rem;
  }

  & .step {
    position: relative;
    width: 2px;
    height: 8px;
    display: flex;
    justify-content: center;
    background-color: $color-content-disable;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    & .label-step {
      margin-top: 1rem;
    }
  }
}

.element-min {
  position: relative;
  height: 4px;
  background-color: $color-primary;
  border-top-left-radius: 1rem;
  border-bottom-left-radius: 1rem;
}
.element-max {
  position: relative;
  height: 4px;
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
}

.input_slide {
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
  background: transparent;
  cursor: pointer;
  width: 100%;
  height: 4px;
  position: relative;
  border-radius: 1rem;
  background: transparent;
  color: -internal-light-dark(transparent, transparent);

  &.has_min {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    margin-left: 0;
  }
  
  &.has_max {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  &:hover{ 
    .input_slide::-webkit-slider-thumb,
    .input_slide::-moz-range-thumb {
      -webkit-appearance: none;
    }
  }

}

/* Thumb: webkit */
.input_slide::-webkit-slider-thumb,
.input_slide::-moz-range-thumb {
  -webkit-appearance: none;
  position: relative;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: none;
}



.group_slide {
  position: relative;
  width: 100%;

  & .input_slide {
    width: inherit;
    position: absolute;
  }
  
  & .input_slide_start {
    left: 0;
  }
  & .input_slide_end {
    right: 0;
  }
  & .input_slide::-webkit-slider-thumb,
  .input_slide::-moz-range-thumb  {
    -webkit-appearance: none;
  }
}

